{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 247,
  "lineage": "3ba05293-deaa-a7a3-6a84-6d4048aaed97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc73f894e0d202ce",
            "association_id": "eipassoc-0258fef97048665b8",
            "domain": "vpc",
            "id": "eipalloc-0dc73f894e0d202ce",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0bbe67c55679e55ac",
            "private_dns": "ip-10-1-1-21.eu-central-1.compute.internal",
            "private_ip": "10.1.1.21",
            "public_dns": "ec2-18-199-37-114.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.199.37.114",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed-by": "terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_route_table_association.public",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b793f0ea680df3c4",
            "association_id": "eipassoc-02544df234d4f5914",
            "domain": "vpc",
            "id": "eipalloc-0b793f0ea680df3c4",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-049cf5552483babfc",
            "private_dns": "ip-10-1-90-116.eu-central-1.compute.internal",
            "private_ip": "10.1.90.116",
            "public_dns": "ec2-3-78-124-16.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.124.16",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed-by": "terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_route_table_association.public",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dw-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fe204d17e0189fb",
            "arn": "arn:aws:ec2:eu-central-1:890769921003:instance/i-0efbf464d5391d60f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efbf464d5391d60f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dw",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab9bf47160e705a6",
            "private_dns": "ip-10-1-20-106.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.20.106",
            "public_ip": "3.124.4.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06cb77cf988374170",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02a2742aa0cd2f18e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017ad77ce30fa3b21",
            "tags": {
              "Name": "Dominik-Weremiuk-ec-bastion",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-ec-bastion",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a2742aa0cd2f18e"
            ]
          },
          "dependencies": [
            "aws_route.nat_gw",
            "aws_security_group.web_sg",
            "aws_subnet.dw-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dw-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fe204d17e0189fb",
            "arn": "arn:aws:ec2:eu-central-1:890769921003:instance/i-0862c9ece62524de2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0862c9ece62524de2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dw",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049a50be7349895ca",
            "private_dns": "ip-10-1-142-30.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.142.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a9c302596ae520dd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02a2742aa0cd2f18e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044f89f2079d4526e",
            "tags": {
              "Name": "Dominik-Weremiuk-ec2",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-ec2",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a2742aa0cd2f18e"
            ]
          },
          "dependencies": [
            "aws_route.nat_gw",
            "aws_security_group.web_sg",
            "aws_subnet.dw-private"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fe204d17e0189fb",
            "arn": "arn:aws:ec2:eu-central-1:890769921003:instance/i-00333316df2d90b86",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00333316df2d90b86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dw",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e7f7891d48816343",
            "private_dns": "ip-10-1-251-24.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.251.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-096226bbf6ff9e72a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02a2742aa0cd2f18e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06be858a2a2003719",
            "tags": {
              "Name": "Dominik-Weremiuk-ec2",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-ec2",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a2742aa0cd2f18e"
            ]
          },
          "dependencies": [
            "aws_route.nat_gw",
            "aws_security_group.web_sg",
            "aws_subnet.dw-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:internet-gateway/igw-0ac38d1515cd9e3a9",
            "id": "igw-0ac38d1515cd9e3a9",
            "owner_id": "890769921003",
            "tags": {
              "Name": "Dominik-Weremiuk-ig",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-ig",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_dw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:loadbalancer/app/dw-lb-tf/881744ddf23d91cc",
            "arn_suffix": "app/dw-lb-tf/881744ddf23d91cc",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dw-lb-tf-246166882.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:loadbalancer/app/dw-lb-tf/881744ddf23d91cc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dw-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02a2742aa0cd2f18e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017ad77ce30fa3b21"
              },
              {
                "subnet_id": "subnet-0ed7a46fe9d4adab7"
              }
            ],
            "subnets": [
              "subnet-017ad77ce30fa3b21",
              "subnet-0ed7a46fe9d4adab7"
            ],
            "tags": {
              "Name": "Dominik-Weremiuk-alb",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-alb",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "vpc_id": "vpc-0741a53279e3e8ea0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:listener/app/dw-lb-tf/881744ddf23d91cc/bb42231bcd4fdeb9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:targetgroup/tf-lb-tg/662edf811113120a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:listener/app/dw-lb-tf/881744ddf23d91cc/bb42231bcd4fdeb9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:loadbalancer/app/dw-lb-tf/881744ddf23d91cc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "managed-by": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_dw",
            "aws_lb_target_group.target",
            "aws_security_group.web_sg",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:targetgroup/tf-lb-tg/662edf811113120a",
            "arn_suffix": "targetgroup/tf-lb-tg/662edf811113120a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:targetgroup/tf-lb-tg/662edf811113120a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "managed-by": "terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:targetgroup/tf-lb-tg/662edf811113120a-20240221121730492200000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:targetgroup/tf-lb-tg/662edf811113120a",
            "target_id": "i-0862c9ece62524de2"
          },
          "dependencies": [
            "aws_instance.dw-server",
            "aws_lb_target_group.target",
            "aws_route.nat_gw",
            "aws_security_group.web_sg",
            "aws_subnet.dw-private"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:targetgroup/tf-lb-tg/662edf811113120a-20240221121730465300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:890769921003:targetgroup/tf-lb-tg/662edf811113120a",
            "target_id": "i-00333316df2d90b86"
          },
          "dependencies": [
            "aws_instance.dw-server",
            "aws_lb_target_group.target",
            "aws_route.nat_gw",
            "aws_security_group.web_sg",
            "aws_subnet.dw-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc73f894e0d202ce",
            "association_id": "eipassoc-0258fef97048665b8",
            "connectivity_type": "public",
            "id": "nat-0944ddf8aae23d011",
            "network_interface_id": "eni-0bbe67c55679e55ac",
            "private_ip": "10.1.1.21",
            "public_ip": "18.199.37.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017ad77ce30fa3b21",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT",
              "managed-by": "terraform"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_route_table_association.public",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b793f0ea680df3c4",
            "association_id": "eipassoc-02544df234d4f5914",
            "connectivity_type": "public",
            "id": "nat-0b993aaee4a9ef3be",
            "network_interface_id": "eni-049cf5552483babfc",
            "private_ip": "10.1.90.116",
            "public_ip": "3.78.124.16",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ed7a46fe9d4adab7",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT",
              "managed-by": "terraform"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_route_table_association.public",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a55e8193ad3ed9081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0944ddf8aae23d011",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a55e8193ad3ed908",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.rt_private",
            "aws_route_table.rt_public",
            "aws_route_table_association.public",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:route-table/rtb-0a55e8193ad3ed908",
            "id": "rtb-0a55e8193ad3ed908",
            "owner_id": "890769921003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "Dominik-Weremiuk-private_subnet",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-private_subnet",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:route-table/rtb-0b3856b85fb6a1705",
            "id": "rtb-0b3856b85fb6a1705",
            "owner_id": "890769921003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac38d1515cd9e3a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dominik-Weremiuk-public_subnet",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-public_subnet",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030a2bb9e82c81929",
            "route_table_id": "rtb-0a55e8193ad3ed908",
            "subnet_id": "subnet-044f89f2079d4526e"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.dw-private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059b000f8dad10f6d",
            "route_table_id": "rtb-0a55e8193ad3ed908",
            "subnet_id": "subnet-06be858a2a2003719"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.dw-private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cae75e89859ae614",
            "route_table_id": "rtb-0b3856b85fb6a1705",
            "subnet_id": "subnet-017ad77ce30fa3b21"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dca68a1328f920f",
            "route_table_id": "rtb-0b3856b85fb6a1705",
            "subnet_id": "subnet-0ed7a46fe9d4adab7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_subnet.dw-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:security-group/sg-06aa7e76b11075977",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aa7e76b11075977",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a2742aa0cd2f18e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds sec",
            "name_prefix": "",
            "owner_id": "890769921003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dominik-Weremiuk-secu-group",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-secu-group",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:security-group/sg-02a2742aa0cd2f18e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a2742aa0cd2f18e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP and SSH",
            "name_prefix": "",
            "owner_id": "890769921003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dominik-Weremiuk-secu-group",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-secu-group",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dw-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:subnet/subnet-044f89f2079d4526e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044f89f2079d4526e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dominik-Weremiuk-private_subnet",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-private_subnet",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:subnet/subnet-06be858a2a2003719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06be858a2a2003719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dominik-Weremiuk-private_subnet",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-private_subnet",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dw-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:subnet/subnet-017ad77ce30fa3b21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017ad77ce30fa3b21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dominik-Weremiuk-public_subnet",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-public_subnet",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:subnet/subnet-0ed7a46fe9d4adab7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed7a46fe9d4adab7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dominik-Weremiuk-public_subnet",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-public_subnet",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            },
            "vpc_id": "vpc-0741a53279e3e8ea0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:890769921003:vpc/vpc-0741a53279e3e8ea0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-039e8242924a3ffd0",
            "default_route_table_id": "rtb-04ffeb25878a7c89a",
            "default_security_group_id": "sg-0a5b2a950f0ec2e66",
            "dhcp_options_id": "dopt-0da4bb963c62c95f2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0741a53279e3e8ea0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ffeb25878a7c89a",
            "owner_id": "890769921003",
            "tags": {
              "Name": "Dominik-Weremiuk-VPC",
              "Owner": "dominik.weremiuk"
            },
            "tags_all": {
              "Name": "Dominik-Weremiuk-VPC",
              "Owner": "dominik.weremiuk",
              "managed-by": "terraform"
            }
          }
        }
      ]
    }
  ]
}